--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
               </td>
             </tr>
           <tr>
-            <td><p>You have two upcoming appointments.</p></td>
+            <td><p>You have 2 upcoming appointments.</p></td>
             <td><button class="sectionButton">View Upcoming</button></td>
             </tr>
           <!--End of Section 1 Appointments-->
@@ -100,7 +100,7 @@
             <td colspan="2"><h3>Prescriptions</h3></td>
             </tr>
           <tr>
-            <td><p>You have two upcoming appointments.</p></td>
+            <td><p>You have 2 upcoming appointments.</p></td>
             <td><button class="sectionButton">View Prescriptions</button></td>
             </tr>
           <!--End of Section 2 Prescriptions-->
