--- a/prescription.html
+++ b/prescription.html
@@ -6,9 +6,8 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>PatientPrescriptionView</title>
-<link href="css/bootstrap-4.2.1.css" rel="stylesheet" type="text/css">
+<link href="css/bootstrap.min.css" rel="stylesheet" type="text/css">
 <link href="css/bootstrap-grid.min.css" rel="stylesheet" type="text/css">
-<!-- InstanceEndEditable -->
 <link href="patientCSS.css" rel="stylesheet" type="text/css">
 <!-- InstanceBeginEditable name="head" -->
 <!-- InstanceEndEditable -->
@@ -103,7 +102,29 @@
 		  <div>
 		    <p>Instructions for the medication would be located here.</p>
 			<span>Prescribed by: John Smith MD</span><span style="margin-left: 20px">Quantity: 90 tablets</span>
-			<button class="sectionButton" style="float:right;">Request refill</button>
+      <button class="sectionButton" style="float:right;" data-toggle="modal" data-target="#requestRefill">
+        Request refill
+      </button>
+      <!--Modal-->
+      <div class="modal fade" id="requestRefill" tabindex="-1" role="dialog" aria-labelledby="refillLabel" aria-hidden="true">
+          <div class="modal-dialog" role="document">
+            <div class="modal-content">
+              <div class="modal-header">
+                <h5 class="modal-title" id="refillLabel">Message</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                  <span aria-hidden="true">&times;</span>
+                </button>
+              </div>
+              <div class="modal-body">
+                Request refill for this drug?
+              </div>
+              <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Deny</button>
+                <button type="button" class="btn btn-primary">Confirm</button>
+              </div>
+            </div>
+          </div>
+        </div>
 		  </div>
 		</div>
 		  
@@ -115,7 +136,7 @@
 		  <div>
 		    <p>Instructions for the medication would be located here.</p>
 			<span>Prescribed by: John Smith MD</span><span style="margin-left: 20px">Quantity: 90 tablets</span>
-			<button class="sectionButton" style="float: right;">Request refill</button>
+			<button class="sectionButton" style="float: right;" data-toggle="modal" data-target="#requestRefill">Request refill</button>
 		  </div>
 		</div>
       <!-- InstanceEndEditable --></td>
@@ -127,4 +148,7 @@
   </tbody>
 </table>
 </body>
+<script src="js/jquery-3.3.1.min.js"></script>
+<script src="js/bootstrap.js"></script>
+<script src="js/bootstrap.bundle.js"></script>
 <!-- InstanceEnd --></html>
