login and signup screens

--- a/login.html
+++ b/login.html
@@ -28,15 +28,15 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col, skinnyForm">
-                        <form style="max-width: 400px;">
+                <div class="col, skinnyForm" style="min-width: 300px;">
+                        <form>
                                 <div class="form-group">
                                   <label for="exampleInputEmail1">Email address</label>
-                                  <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
+                                  <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email" required>
                                 </div>
                                 <div class="form-group">
                                   <label for="exampleInputPassword1">Password</label>
-                                  <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+                                  <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password" required>
                                 </div>
                                 <button type="submit" class="btn btn-primary">Submit</button><br><br>
                                 <p>No account? <a href="signUp.html">Sign up here.</a></p>
