added more doctor pages & modals

--- a/prescription.html
+++ b/prescription.html
@@ -96,12 +96,12 @@
       </div>
 	  <div class="prescriptionContainer">
 		  <div class="spaceBetween">
-		  	<h5 class="drugName">Drug name here</h5>
+		  	<h5 class="drugName">Ibuprofen</h5>
 		  	<p>Prescribed on: 02/12/12</p>
 		  </div>
 		  <div>
-		    <p>Instructions for the medication would be located here.</p>
-			<span>Prescribed by: John Smith MD</span><span style="margin-left: 20px">Quantity: 90 tablets</span>
+		    <p>Take one daily as needed for pain</p>
+			<span>Prescribed by: John Smith MD</span><span style="margin-left: 20px">Quantity: 800mg</span>
       <button class="sectionButton" style="float:right;" data-toggle="modal" data-target="#requestRefill">
         Request refill
       </button>
@@ -130,12 +130,12 @@
 		  
 		  <div class="prescriptionContainer">
 		  <div class="spaceBetween">
-		  	<h5 class="drugName">Drug name here</h5>
+		  	<h5 class="drugName">Oxycodone</h5>
 		  	<p>Prescribed on: 02/12/12</p>
 		  </div>
 		  <div>
-		    <p>Instructions for the medication would be located here.</p>
-			<span>Prescribed by: John Smith MD</span><span style="margin-left: 20px">Quantity: 90 tablets</span>
+		    <p>Take every 6 hours until pain subsides</p>
+			<span>Prescribed by: John Smith MD</span><span style="margin-left: 20px">Quantity: 80mg</span>
 			<button class="sectionButton" style="float: right;" data-toggle="modal" data-target="#requestRefill">Request refill</button>
 		  </div>
 		</div>
