linked image to index

--- a/appointmentDoctorView.html
+++ b/appointmentDoctorView.html
@@ -18,7 +18,7 @@
  
   <tbody>
     <tr>
-      <td class="companylogo"><img src="images/logo.png" width="150"></td>
+      <td class="companylogo"><a href="doctorIndex.php"><img src="images/logo.png" width="150"></a></td>
       <td class="EqunioxTitle">Equinox Medicine Health Portal</td>
       <td align="center" class="signOut">
           <img src="images/man.png" alt="man" height="90px" width="90px" ><br>
