--- a/VidyoWebApp.html
+++ b/VidyoWebApp.html
@@ -1,7 +1,7 @@
 
 <html>
 <head>
-  <title>Vidyo Sample</title>
+  <title>Video Appointment</title>
   <meta http-equiv="content-type" content="text/html; charset=utf-8" />
 </head>
 <body>
