--- a/doctorIndex.html
+++ b/doctorIndex.html
@@ -31,7 +31,8 @@
           <tr class="navcenter">
             <td>
    
-                <p>
+                  <!--Doctor Navigation-->
+                  <p>
                     <a href="doctorIndex.html">
                       <button>Home</button>
                     </a>
@@ -64,7 +65,7 @@
                       <button>Video Call</button>
                     </a>
                   </p>
-            	
+                <!--End Doctor Navigation-->
             </td>
           </tr>
         </tbody>
