--- a/doctorIndex.html
+++ b/doctorIndex.html
@@ -50,12 +50,12 @@
                     </a>
                   </p>
                   <p>
-                    <a href="prescriptionRequest.html">
+                    <a href="doctorPrescriptionRequest.html">
                       <button>Refill Requests</button>
                     </a>
                   </p>
                   <p>
-                    <a href="createUser.html">
+                    <a href="doctorCreateUser.html">
                       <button>New Patient</button>
                     </a>
                   </p>
@@ -106,7 +106,7 @@
             </tr>
           <tr>
             <td><p>You have 1 refill request pending.</p></td>
-            <td><button class="sectionButton" onclick="location.href='prescriptionRequest.html'">View Refill Requests</button></td>
+            <td><button class="sectionButton" onclick="location.href='doctorPrescriptionRequest.html'">View Refill Requests</button></td>
             </tr>
           <!--End of Section 2 Prescriptions-->
           <!--Section 3 Messages-->
