Requires session log

--- a/doctorPrescriptionRequest.html
+++ b/doctorPrescriptionRequest.html
@@ -50,12 +50,12 @@
                         </a>
                       </p>
                       <p>
-                        <a href="prescriptionRequest.html">
+                        <a href="doctorPrescriptionRequest.html">
                           <button>Refill Requests</button>
                         </a>
                       </p>
                       <p>
-                        <a href="createUser.html">
+                        <a href="doctorCreateUser.html">
                           <button>New Patient</button>
                         </a>
                       </p>
