--- a/VidyoWebApp.html
+++ b/VidyoWebApp.html
@@ -49,8 +49,8 @@
             
                   vidyoConnector.Connect({
                     host:"prod.vidyo.io",
-                    token:"cHJvdmlzaW9uAHVzZXIxQDFjMWU5Yi52aWR5by5pbwA2MzcyMTk2OTg1MQAANGE2MWQxMWJkMmQwNDBhNTg1MmU3NThhZmVlZDhiYmJlZGVlN2YyZWRjYmUzZWY2MDRjY2Y2MTVmMmNjMTE2MWMyYmNhMDk5NTIzZGZhMmEyZTdjMjVlMDU0OTdkMDQ0",          // Add generated token (https://developer.vidyo.io/documentation/4-1-16-8/getting-started#Tokens)
-                    displayName: "Jibin",
+                    token:"cHJvdmlzaW9uAENhbUA4NzgwYTQudmlkeW8uaW8ANjM3MjM0Mzk4OTAAADgwODI5ZDcwNDAwNDlmMGJmZmRmZjZkNjcwMDg1YzQ0ZGNhOTQwNWRhMmEzYzZkYzRmMDAwZGVmMGVjMWQ3NmQyZTgwN2ExMWY4NGU4OTNlODcwMjg3MGNkZTVjZGJjYw==",          // Add generated token (https://developer.vidyo.io/documentation/4-1-16-8/getting-started#Tokens)
+                    displayName: "Cam Collins",
                     resourceId:"room2",
                     onSuccess: function(){
                       console.log("Connected!! YAY!");
